fixed #113 Breadcrumbs :hover is broken in chrome

--- a/sources/static/css/application.css
+++ b/sources/static/css/application.css
@@ -332,6 +332,12 @@ a:hover {
     padding-left: 0px;
 }
 
+
+.vlt-breads .breadcrumb .vlt-bread-item-wrapper {
+    display: inline-block;
+}
+
+
 .vlt-breads .breadcrumb .active h2 {
     font-size: 14px;
     font-weight: bold;
